Реализовал авторизацию по jwt токену